--- a/.env
+++ b/.env
@@ -5,3 +5,12 @@ DB_USERNAME=postgres
 DB_PASSWORD=hardstone349
 DB_NAME=postgres
 DB_SYNCHRONIZE=true
+
+# S3 Bucket
+S3_REGION=us-east-1
+S3_BUCKET=amardesigner
+S3_ACCESS_KEY_ID=AKIATGWJ5XK4C2YFQ6UH
+S3_SECRET_ACCESS_KEY=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
+
+#JWT
+JWT_SECRET=myJwt9078654@***
