--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.297.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
@@ -32,7 +34,6 @@
     "@types/better-sqlite3": "^7.6.3",
     "@types/express-session": "^1.17.6",
     "@types/multer": "^1.4.7",
-    "@types/passport-local": "^1.0.35",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.2.0",
     "better-sqlite3-session-store": "^0.1.0",
@@ -40,7 +41,7 @@
     "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
