--- a/package.json
+++ b/package.json
@@ -31,16 +31,12 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
-    "@types/better-sqlite3": "^7.6.3",
-    "@types/express-session": "^1.17.6",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
+    "@types/passport": "^1.0.12",
     "bcrypt": "^5.1.0",
-    "better-sqlite3": "^8.2.0",
-    "better-sqlite3-session-store": "^0.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "express-session": "^1.17.3",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
