--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ S3_SECRET_ACCESS_KEY=d8dOsYDNzhOVxcZXIziDoedFDNRQwQVIOPekGM4v
 
 #JWT
 JWT_SECRET=myJwt9078654@***
+
+# Admin 
+AMARDESIGNER_ADMIN_EMAIL=admin@amardesigner.com
+AMARDESIGNER_ADMIN_PASSWORD='Y#4Mo^2&K05P'
